# quad-rand

./: Cargo.toml  README.md
examples/: all_range_kinds.rs  basic.rs  basic_with_state.rs  compat.rs  compat_with_state.rs
src/: fy.rs  lib.rs
