[package]
name = "quad-rand"
version = "0.2.0"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/not-fl3/quad-rand"
repository = "https://github.com/not-fl3/quad-rand"
description = """
Pseudo random implementation with std atomics.
"""
readme="README.md"

[[example]]
name = "compat"
path = "examples/compat.rs"
required-features = ["rand"]

[dependencies]
[dependencies.rand]
version = "0.8"
optional = true
default-features = false
features = []
